rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__keyword_extension__test__unclosed-2.snap
---
source: src/nasl/syntax/keyword_extension.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (unclosed), \"local_var a, 1, c;\")"
snapshot_kind: text
---
error: Missing semicolon: 1
  ┌─ unclosed:1:1
  │
1 │ local_var a, 1, c;
  │ ^ Missing semicolon: 1
